--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title: "Vitaliy Zasadnyy"
 description: "Hi, my name is Vitaliy, I'm mobile developer and Google Developers Group Lviv co-founder. I'm interested in GameDev, Android, iOS, Google App Engine and community management. Used to work for enterprise giants like EPAM as well as for product companies such as NRavo."
 keywords: "developer, geek, google fan, gdg manager"
 baseurl: "" 
-url: "http://zasadnyy.org.ua" 
+url: "http://zasadnyy-inc.github.io/" 
 
 # Analytics
 google_analytics_tracking_id: ""
