--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ exclude: ["/automation/", "README.md", "LICENCE.txt", "CNAME"]
 title: "Vitaliy Zasadnyy"
 description: "Hi, my name is Vitaliy, I'm mobile developer and Google Developers Group Lviv co-founder. I'm interested in GameDev, Android, iOS, Google App Engine and community management. Used to work for enterprise giants like EPAM as well as for product companies such as NRavo."
 keywords: "developer, geek, google fan, gdg manager"
-baseurl: "" 
+baseurl: "/personal-site" 
 url: "http://zasadnyy-inc.github.io" 
 
 # Analytics
