--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ gems:
 
 # Build settings
 markdown: kramdown
-permalink: pretty
+permalink: /blog/:title
 exclude: ["/automation/", "README.md", "LICENCE.txt", "CNAME"]
 
 # Site settings
