On web page. Note and quote highlight in articles, new style for inline code.

--- a/_data/vitaliy-on-web.yml
+++ b/_data/vitaliy-on-web.yml
@@ -1,3 +1,4 @@
+block_title: "My stuff on the web"
 list:
  - {title: "How to make Unity work better on Maverickdnyy", source-name: "Nravo developers", link: "http://developers.nravo.com/how-to-make-unity-work-better-on-maverick/#.VIVrJtWUeVM", type: "article"}
  - {title: "Mastering Unity Project Folder Structure. Level 0 – Folders required for version control systems", source-name: "Nravo developers", link: "http://developers.nravo.com/mastering-unity-project-folder-structure-level-0-vcs/#.VIVrX9WUeVM", type: "article"}
