--- a/_data/vitaliy.yml
+++ b/_data/vitaliy.yml
@@ -55,5 +55,5 @@ contact_me: "Whether you have an interesting project or just want to say hi, fee
 
 # Blog
 images_folder: "/img/vitaliy/posts/"
-discus_short_name: ""
+discus_short_name: "vzasadnyy"
 get_in_touch: "You can find me on <a href='https://www.google.com/+VitalikZasadnyy' target='_blank'>Google+</a>, <a href='http://twitter.com/zasadnyy' target='_blank'>Twitter</a> or <a href='https://www.facebook.com/zasadnyy' target='_blank'>Facebook</a>. If you want get me directly, please send me an <a href='mailto:vitaliy@zasadnyy.com' target='_blank'>email</a>."
